# verilayer-agentic-rag

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: Dockerfile.api  Dockerfile.gradio
src/agents/: state.py
src/agents/graph/: verilayer_graph.py
src/agents/nodes/: claim_extractor.py  claim_verifier.py  confidence_scorer.py  decision.py  document_grader.py  generator.py  planner.py  rewriter.py  sub_query_retriever.py
src/api/: main.py
src/api/routes/: health.py  ingest.py  metrics.py  search.py  verify.py
src/core/: config.py  logging.py
src/evaluation/: evaluator.py
src/ingestion/: chunker.py  metadata_extractor.py  opensearch_writer.py  pipeline.py  postgres_writer.py
src/models/: schemas.py
src/observability/: audit_logger.py  langfuse_client.py  redis_cache.py
src/rag/: generator.py  prompt_templates.py
src/retrieval/: bm25.py  embeddings.py  hybrid.py  ranker.py  vector_search.py
tests/integration/: conftest.py  test_pipeline.py
tests/unit/: test_agents.py  test_bm25.py  test_chunker.py  test_hybrid.py  test_schemas.py
ui/: gradio_app.py
ui/components/: __init__.py  answer_panel.py  claims_table.py  ingest_panel.py  metrics_panel.py  query_panel.py  sources_panel.py  trace_panel.py
ui/utils/: api_client.py
