[project]
name = "verilayer"
version = "0.1.0"
description = "VeriLayer — Trust Layer for LLM Systems. Agentic RAG with Hybrid Retrieval and Claim Verification."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "live: marks tests as requiring live external services (Redis, OpenSearch, PostgreSQL, Groq)",
]
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
